// Copyright 2021 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package weetbix.internal.ingestion.control;

import "google/protobuf/timestamp.proto";
import "infra/appengine/weetbix/proto/v1/common.proto";
import "infra/appengine/weetbix/proto/v1/changelist.proto";

option go_package = "infra/appengine/weetbix/internal/ingestion/control/proto;controlpb";

// BuildResult represents the result from the buildbucket pub/sub
// that should be passed to the result ingestion task.
message BuildResult {
  // Buildbucket build ID, unique per Buildbucket instance.
  int64 id = 1;

  // Buildbucket host, e.g. "cr-buildbucket.appspot.com".
  string host = 2;

  // The time the build was created.
  google.protobuf.Timestamp creation_time = 3;

  // The LUCI Project to which the build belongs.
  string project = 4;
}

// PresubmitResult represents the result from the presubmit pub/sub
// that should be passed to the result ingestion task.
message PresubmitResult {
  // The identity of the presubmit run. If the ingestion does not relate to test
  // results obtained in a presubmit run, this field should not be set.
  weetbix.v1.PresubmitRunId presubmit_run_id = 1;

  // Whether the presubmit run succeeded. This field should be ignored if
  // presubmit_run_id is not set. If this is false, it could mean
  // the presubmit run failed, or was cancelled.
  bool presubmit_run_succeeded = 2;

  // The presubmit run mode. Defined by LUCI CV.
  // Valid values include "FULL_RUN", "DRY_RUN" and "QUICK_DRY_RUN".
  string mode = 6;

  // The owner of the presubmit run (if any).
  // This is the owner of the CL on which CQ+1/CQ+2 was clicked
  // (even in case of presubmit run with multiple CLs).
  // There is scope for this field to become an email address if privacy
  // approval is obtained, until then it is "automation" (for automation
  // service accounts) and "user" otherwise.
  string owner = 4;

  // The changelist(s) that were included in the presubmit run.
  // Changelists are sorted in ascending (host, change, patchset) order.
  repeated weetbix.v1.Changelist cls = 5;

  // The time the presubmit was created.
  google.protobuf.Timestamp creation_time = 3;

  // Whether the build was critical to the completion of the presubmit run.
  // True if the failure of the build would cause the presubmit run to fail.
  bool critical = 7;
}
